🎨 style(main.css): add minimum height to body The minimum height of the body is set to 100vh to ensure that the content of the page is always visible, even if there is not enough content to fill the entire viewport.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -47,6 +47,7 @@ body {
   overflow-x: hidden;
   font-family: var(--font-family);
   width: 100%;
+  min-height: 100vh;
 }
 
 p {
